[gd_scene load_steps=6 format=3 uid="uid://cu46g1yonmqgj"]

[ext_resource type="PackedScene" uid="uid://b28jgchnpgqbx" path="res://assets/glb/schreibtisch.glb" id="1_fdqxc"]
[ext_resource type="Script" uid="uid://snecg6bsc10m" path="res://scripts/gate_counter.gd" id="2_fy01x"]
[ext_resource type="PackedScene" uid="uid://b78ki2eyl6xym" path="res://scenes/npc_airline_worker.tscn" id="2_hu65x"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_35k4y"]
data = PackedVector3Array(-1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, 8.4695, -4.6994, -0.3521, -8.2106, -4.6481, -3.3141, -8.2666, -4.6994, -2.9536, 8.4695, -4.6994, -0.3521, 8.5256, -4.6481, -0.7126, -8.2106, -4.6481, -3.3141, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, 1, -1, 1, 1, 8.4695, -4.6994, -0.3521, -1, 1, -1, 8.2666, 4.6994, 0.9536, 8.2666, 4.6994, 0.9536, -1, 1, -1, -1, -1, -1, 8.2666, 4.6994, 0.9536, -1, -1, -1, -8.4695, 4.6994, -1.6479, -8.4695, 4.6994, -1.6479, -1, -1, -1, 1, -1, -1, -8.2666, -4.6994, -2.9536, 1, 1, -1, 8.4695, -4.6994, -0.3521, 8.4695, -4.6994, -0.3521, 1, 1, -1, -1, 1, -1, -8.4695, 4.6994, -1.6479, 1, -1, -1, -8.2666, -4.6994, -2.9536, -8.2666, -4.6994, -2.9536, 1, -1, -1, 1, 1, -1, -8.0164, -4.4493, -3.2556, -8.2204, 4.5431, -1.9434, -8.2108, 4.5519, -2.0052, -8.0164, -4.4493, -3.2556, -8.026, -4.4581, -3.1939, -8.2204, 4.5431, -1.9434, 8.2666, 4.6994, 0.9536, 8.5256, -4.6481, -0.7126, 8.4695, -4.6994, -0.3521, 8.2666, 4.6994, 0.9536, 8.3226, 4.7507, 0.5931, 8.5256, -4.6481, -0.7126, -8.2666, -4.6994, -2.9536, -8.4135, 4.7507, -2.0084, -8.4695, 4.6994, -1.6479, -8.2666, -4.6994, -2.9536, -8.2106, -4.6481, -3.3141, -8.4135, 4.7507, -2.0084, -8.4695, 4.6994, -1.6479, 8.3226, 4.7507, 0.5931, 8.2666, 4.6994, 0.9536, -8.4695, 4.6994, -1.6479, -8.4135, 4.7507, -2.0084, 8.3226, 4.7507, 0.5931, 8.3229, -4.4493, -0.7158, 8.3226, 4.7507, 0.5931, 8.1285, 4.5519, 0.5346, 8.3229, -4.4493, -0.7158, 8.5256, -4.6481, -0.7126, 8.3226, 4.7507, 0.5931, 8.1285, 4.5519, 0.5346, -8.4135, 4.7507, -2.0084, -8.2108, 4.5519, -2.0052, 8.1285, 4.5519, 0.5346, 8.3226, 4.7507, 0.5931, -8.4135, 4.7507, -2.0084, -8.0164, -4.4493, -3.2556, 8.5256, -4.6481, -0.7126, 8.3229, -4.4493, -0.7158, -8.0164, -4.4493, -3.2556, -8.2106, -4.6481, -3.3141, 8.5256, -4.6481, -0.7126, -8.2108, 4.5519, -2.0052, -8.2106, -4.6481, -3.3141, -8.0164, -4.4493, -3.2556, -8.2108, 4.5519, -2.0052, -8.4135, 4.7507, -2.0084, -8.2106, -4.6481, -3.3141, 8.1189, 4.5431, 0.5964, -8.026, -4.4581, -3.1939, 8.3133, -4.4581, -0.6541, 8.1189, 4.5431, 0.5964, -8.2204, 4.5431, -1.9434, -8.026, -4.4581, -3.1939, -8.2108, 4.5519, -2.0052, 8.1189, 4.5431, 0.5964, 8.1285, 4.5519, 0.5346, -8.2108, 4.5519, -2.0052, -8.2204, 4.5431, -1.9434, 8.1189, 4.5431, 0.5964, 8.3229, -4.4493, -0.7158, -8.026, -4.4581, -3.1939, -8.0164, -4.4493, -3.2556, 8.3229, -4.4493, -0.7158, 8.3133, -4.4581, -0.6541, -8.026, -4.4581, -3.1939, 8.1285, 4.5519, 0.5346, 8.3133, -4.4581, -0.6541, 8.3229, -4.4493, -0.7158, 8.1285, 4.5519, 0.5346, 8.1189, 4.5431, 0.5964, 8.3133, -4.4581, -0.6541, -13.2288, -15.1637, -20.5506, -13.2288, -12.6062, 3.8385, -13.2288, -15.1637, 3.8385, -13.2288, -15.1637, -20.5506, -13.2288, -12.6062, -20.5506, -13.2288, -12.6062, 3.8385, -10.2357, -45.5347, 3.8385, -13.2288, -15.1637, 3.8385, -10.2357, -15.1637, 3.8385, -10.2357, -45.5347, 3.8385, -13.2288, -45.5347, 3.8385, -13.2288, -15.1637, 3.8385, -13.2288, -45.5347, 3.8385, -13.2288, -15.1637, -20.5506, -13.2288, -15.1637, 3.8385, -13.2288, -45.5347, 3.8385, -13.2288, -45.5347, -20.5506, -13.2288, -15.1637, -20.5506, -13.2288, -45.5347, -20.5506, -10.2357, -45.5347, 3.8385, -10.2357, -45.5347, -20.5506, -13.2288, -45.5347, -20.5506, -13.2288, -45.5347, 3.8385, -10.2357, -45.5347, 3.8385, -10.2357, -45.5347, -20.5506, -10.2357, -15.1637, 3.8385, -10.2357, -15.1637, -20.5506, -10.2357, -45.5347, -20.5506, -10.2357, -45.5347, 3.8385, -10.2357, -15.1637, 3.8385, -13.2288, -45.5347, -20.5506, -10.2357, -15.1637, -20.5506, -13.2288, -15.1637, -20.5506, -13.2288, -45.5347, -20.5506, -10.2357, -45.5347, -20.5506, -10.2357, -15.1637, -20.5506, -10.2357, -12.6062, -20.5506, -13.2288, -12.6062, 3.8385, -13.2288, -12.6062, -20.5506, -10.2357, -12.6062, -20.5506, -10.2357, -12.6062, 3.8385, -13.2288, -12.6062, 3.8385, -10.2357, -12.6062, -20.5506, 34.2629, -12.6062, 3.8385, -10.2357, -12.6062, 3.8385, -10.2357, -12.6062, -20.5506, 34.2629, -12.6062, -20.5506, 34.2629, -12.6062, 3.8385, -10.2357, -15.1637, -20.5506, -13.2288, -12.6062, -20.5506, -13.2288, -15.1637, -20.5506, -10.2357, -15.1637, -20.5506, -10.2357, -12.6062, -20.5506, -13.2288, -12.6062, -20.5506, 34.2629, -15.1637, 3.8385, 34.2629, -12.6062, 5.7959, 34.2629, -12.6062, 3.8385, 34.2629, -15.1637, 3.8385, 34.2629, -15.1637, 5.7959, 34.2629, -12.6062, 5.7959, 34.2629, -15.1637, 3.8385, 34.2629, -12.6062, -20.5506, 34.2629, -15.1637, -20.5506, 34.2629, -15.1637, 3.8385, 34.2629, -12.6062, 3.8385, 34.2629, -12.6062, -20.5506, -10.2357, -15.1637, 3.8385, 34.2629, -15.1637, -20.5506, -10.2357, -15.1637, -20.5506, -10.2357, -15.1637, 3.8385, 34.2629, -15.1637, 3.8385, 34.2629, -15.1637, -20.5506, -10.2357, -15.1637, -20.5506, 34.2629, -12.6062, -20.5506, -10.2357, -12.6062, -20.5506, -10.2357, -15.1637, -20.5506, 34.2629, -15.1637, -20.5506, 34.2629, -12.6062, -20.5506, -10.2357, -12.6062, 3.8385, -13.2288, -12.6062, 5.7959, -13.2288, -12.6062, 3.8385, -10.2357, -12.6062, 3.8385, -10.2357, -12.6062, 5.7959, -13.2288, -12.6062, 5.7959, -13.2288, -15.1637, 5.7959, -10.2357, -12.6062, 5.7959, -10.2357, -15.1637, 5.7959, -13.2288, -15.1637, 5.7959, -13.2288, -12.6062, 5.7959, -10.2357, -12.6062, 5.7959, -10.2357, -12.6062, 5.7959, 34.2629, -15.1637, 5.7959, -10.2357, -15.1637, 5.7959, -10.2357, -12.6062, 5.7959, 34.2629, -12.6062, 5.7959, 34.2629, -15.1637, 5.7959, -13.2288, -15.1637, 5.7959, -13.2288, -45.5763, 3.8385, -13.2288, -15.1637, 3.8385, -13.2288, -15.1637, 5.7959, -13.2288, -45.5763, 5.7959, -13.2288, -45.5763, 3.8385, 34.2629, -12.6062, 3.8385, -10.2357, -12.6062, 5.7959, -10.2357, -12.6062, 3.8385, 34.2629, -12.6062, 3.8385, 34.2629, -12.6062, 5.7959, -10.2357, -12.6062, 5.7959, 34.2629, -15.1637, 5.7959, -10.2357, -45.5763, 5.7959, -10.2357, -15.1637, 5.7959, 34.2629, -15.1637, 5.7959, 34.2629, -45.5763, 5.7959, -10.2357, -45.5763, 5.7959, -13.2288, -12.6062, 3.8385, -13.2288, -15.1637, 5.7959, -13.2288, -15.1637, 3.8385, -13.2288, -12.6062, 3.8385, -13.2288, -12.6062, 5.7959, -13.2288, -15.1637, 5.7959, -13.2288, -45.5763, 3.8385, -10.2357, -45.5763, 5.7959, -10.2357, -45.5763, 3.8385, -13.2288, -45.5763, 3.8385, -13.2288, -45.5763, 5.7959, -10.2357, -45.5763, 5.7959, -10.2357, -45.5763, 3.8385, 34.2629, -45.5763, 5.7959, 34.2629, -45.5763, 3.8385, -10.2357, -45.5763, 3.8385, -10.2357, -45.5763, 5.7959, 34.2629, -45.5763, 5.7959, -13.2288, -15.1637, 3.8385, -10.2357, -45.5763, 3.8385, -10.2357, -15.1637, 3.8385, -13.2288, -15.1637, 3.8385, -13.2288, -45.5763, 3.8385, -10.2357, -45.5763, 3.8385, -10.2357, -15.1637, 5.7959, -13.2288, -45.5763, 5.7959, -13.2288, -15.1637, 5.7959, -10.2357, -15.1637, 5.7959, -10.2357, -45.5763, 5.7959, -13.2288, -45.5763, 5.7959, 34.2629, -15.1637, 3.8385, 34.2629, -45.5763, 5.7959, 34.2629, -15.1637, 5.7959, 34.2629, -15.1637, 3.8385, 34.2629, -45.5763, 3.8385, 34.2629, -45.5763, 5.7959, -10.2357, -15.1637, 3.8385, 34.2629, -45.5763, 3.8385, 34.2629, -15.1637, 3.8385, -10.2357, -15.1637, 3.8385, -10.2357, -45.5763, 3.8385, 34.2629, -45.5763, 3.8385, 34.2598, -15.1639, -20.5506, 31.2666, -15.1639, 3.8385, 31.2666, -15.1639, -20.5506, 34.2598, -15.1639, -20.5506, 34.2598, -15.1639, 3.8385, 31.2666, -15.1639, 3.8385, 34.2598, -45.5347, 3.8385, 31.2666, -15.1639, 3.8385, 34.2598, -15.1639, 3.8385, 34.2598, -45.5347, 3.8385, 31.2666, -45.5347, 3.8385, 31.2666, -15.1639, 3.8385, 31.2666, -45.5347, 3.8385, 31.2666, -15.1639, -20.5506, 31.2666, -15.1639, 3.8385, 31.2666, -45.5347, 3.8385, 31.2666, -45.5347, -20.5506, 31.2666, -15.1639, -20.5506, 31.2666, -45.5347, -20.5506, 34.2598, -45.5347, 3.8385, 34.2598, -45.5347, -20.5506, 31.2666, -45.5347, -20.5506, 31.2666, -45.5347, 3.8385, 34.2598, -45.5347, 3.8385, 34.2598, -45.5347, -20.5506, 34.2598, -15.1639, 3.8385, 34.2598, -15.1639, -20.5506, 34.2598, -45.5347, -20.5506, 34.2598, -45.5347, 3.8385, 34.2598, -15.1639, 3.8385, 31.2666, -45.5347, -20.5506, 34.2598, -15.1639, -20.5506, 31.2666, -15.1639, -20.5506, 31.2666, -45.5347, -20.5506, 34.2598, -45.5347, -20.5506, 34.2598, -15.1639, -20.5506, -0.0011, -12.7754, -0.9433, 0.1831, -0.977, -0.9251, -0.0011, -0.977, -0.9433, -0.0011, -12.7754, -0.9433, 0.1831, -12.7754, -0.9251, 0.1831, -0.977, -0.9251, 0.1831, -12.7754, -0.9251, 0.3604, -0.977, -0.8715, 0.1831, -0.977, -0.9251, 0.1831, -12.7754, -0.9251, 0.3604, -12.7754, -0.8715, 0.3604, -0.977, -0.8715, 0.3604, -12.7754, -0.8715, 0.5231, -0.977, -0.784, 0.3604, -0.977, -0.8715, 0.3604, -12.7754, -0.8715, 0.5231, -12.7754, -0.784, 0.5231, -0.977, -0.784, 0.5231, -12.7754, -0.784, 0.6666, -0.977, -0.6668, 0.5231, -0.977, -0.784, 0.5231, -12.7754, -0.784, 0.6666, -12.7754, -0.6668, 0.6666, -0.977, -0.6668, 0.6666, -12.7754, -0.6668, 0.7837, -0.977, -0.5239, 0.6666, -0.977, -0.6668, 0.6666, -12.7754, -0.6668, 0.7837, -12.7754, -0.5239, 0.7837, -0.977, -0.5239, 0.7837, -12.7754, -0.5239, 0.8707, -0.977, -0.3605, 0.7837, -0.977, -0.5239, 0.7837, -12.7754, -0.5239, 0.8707, -12.7754, -0.3605, 0.8707, -0.977, -0.3605, 0.8707, -12.7754, -0.3605, 0.9244, -0.977, -0.1837, 0.8707, -0.977, -0.3605, 0.8707, -12.7754, -0.3605, 0.9244, -12.7754, -0.1837, 0.9244, -0.977, -0.1837, 0.9244, -12.7754, -0.1837, 0.9427, -0.977, 0.0005, 0.9244, -0.977, -0.1837, 0.9244, -12.7754, -0.1837, 0.9427, -12.7754, 0.0005, 0.9427, -0.977, 0.0005, 0.9427, -12.7754, 0.0005, 0.9244, -0.977, 0.1847, 0.9427, -0.977, 0.0005, 0.9427, -12.7754, 0.0005, 0.9244, -12.7754, 0.1847, 0.9244, -0.977, 0.1847, 0.9244, -12.7754, 0.1847, 0.8707, -0.977, 0.3619, 0.9244, -0.977, 0.1847, 0.9244, -12.7754, 0.1847, 0.8707, -12.7754, 0.3619, 0.8707, -0.977, 0.3619, 0.8707, -12.7754, 0.3619, 0.7837, -0.977, 0.5249, 0.8707, -0.977, 0.3619, 0.8707, -12.7754, 0.3619, 0.7837, -12.7754, 0.5249, 0.7837, -0.977, 0.5249, 0.7837, -12.7754, 0.5249, 0.6666, -0.977, 0.6678, 0.7837, -0.977, 0.5249, 0.7837, -12.7754, 0.5249, 0.6666, -12.7754, 0.6678, 0.6666, -0.977, 0.6678, 0.6666, -12.7754, 0.6678, 0.5231, -0.977, 0.7854, 0.6666, -0.977, 0.6678, 0.6666, -12.7754, 0.6678, 0.5231, -12.7754, 0.7854, 0.5231, -0.977, 0.7854, 0.5231, -12.7754, 0.7854, 0.3604, -0.977, 0.8725, 0.5231, -0.977, 0.7854, 0.5231, -12.7754, 0.7854, 0.3604, -12.7754, 0.8725, 0.3604, -0.977, 0.8725, 0.3604, -12.7754, 0.8725, 0.1831, -0.977, 0.926, 0.3604, -0.977, 0.8725, 0.3604, -12.7754, 0.8725, 0.1831, -12.7754, 0.926, 0.1831, -0.977, 0.926, 0.1831, -12.7754, 0.926, -0.0011, -0.977, 0.9443, 0.1831, -0.977, 0.926, 0.1831, -12.7754, 0.926, -0.0011, -12.7754, 0.9443, -0.0011, -0.977, 0.9443, -0.0011, -12.7754, 0.9443, -0.1849, -0.977, 0.926, -0.0011, -0.977, 0.9443, -0.0011, -12.7754, 0.9443, -0.1849, -12.7754, 0.926, -0.1849, -0.977, 0.926, -0.1849, -12.7754, 0.926, -0.3621, -0.977, 0.8725, -0.1849, -0.977, 0.926, -0.1849, -12.7754, 0.926, -0.3621, -12.7754, 0.8725, -0.3621, -0.977, 0.8725, -0.3621, -12.7754, 0.8725, -0.5254, -0.977, 0.7854, -0.3621, -0.977, 0.8725, -0.3621, -12.7754, 0.8725, -0.5254, -12.7754, 0.7854, -0.5254, -0.977, 0.7854, -0.5254, -12.7754, 0.7854, -0.6683, -0.977, 0.6678, -0.5254, -0.977, 0.7854, -0.5254, -12.7754, 0.7854, -0.6683, -12.7754, 0.6678, -0.6683, -0.977, 0.6678, -0.6683, -12.7754, 0.6678, -0.7854, -0.977, 0.5249, -0.6683, -0.977, 0.6678, -0.6683, -12.7754, 0.6678, -0.7854, -12.7754, 0.5249, -0.7854, -0.977, 0.5249, -0.7854, -12.7754, 0.5249, -0.873, -0.977, 0.3619, -0.7854, -0.977, 0.5249, -0.7854, -12.7754, 0.5249, -0.873, -12.7754, 0.3619, -0.873, -0.977, 0.3619, -0.873, -12.7754, 0.3619, -0.9267, -0.977, 0.1847, -0.873, -0.977, 0.3619, -0.873, -12.7754, 0.3619, -0.9267, -12.7754, 0.1847, -0.9267, -0.977, 0.1847, -0.9267, -12.7754, 0.1847, -0.9444, -0.977, 0.0005, -0.9267, -0.977, 0.1847, -0.9267, -12.7754, 0.1847, -0.9444, -12.7754, 0.0005, -0.9444, -0.977, 0.0005, -0.9444, -12.7754, 0.0005, -0.9267, -0.977, -0.1837, -0.9444, -0.977, 0.0005, -0.9444, -12.7754, 0.0005, -0.9267, -12.7754, -0.1837, -0.9267, -0.977, -0.1837, -0.9267, -12.7754, -0.1837, -0.873, -0.977, -0.3605, -0.9267, -0.977, -0.1837, -0.9267, -12.7754, -0.1837, -0.873, -12.7754, -0.3605, -0.873, -0.977, -0.3605, -0.873, -12.7754, -0.3605, -0.7854, -0.977, -0.5239, -0.873, -0.977, -0.3605, -0.873, -12.7754, -0.3605, -0.7854, -12.7754, -0.5239, -0.7854, -0.977, -0.5239, -0.7854, -12.7754, -0.5239, -0.6683, -0.977, -0.6668, -0.7854, -0.977, -0.5239, -0.7854, -12.7754, -0.5239, -0.6683, -12.7754, -0.6668, -0.6683, -0.977, -0.6668, -0.6683, -12.7754, -0.6668, -0.5254, -0.977, -0.784, -0.6683, -0.977, -0.6668, -0.6683, -12.7754, -0.6668, -0.5254, -12.7754, -0.784, -0.5254, -0.977, -0.784, -0.5254, -12.7754, -0.784, -0.3621, -0.977, -0.8715, -0.5254, -0.977, -0.784, -0.5254, -12.7754, -0.784, -0.3621, -12.7754, -0.8715, -0.3621, -0.977, -0.8715, 0.3604, -0.977, -0.8715, -0.0011, -0.977, -0.9433, 0.1831, -0.977, -0.9251, -0.0011, -0.977, -0.9433, -0.3621, -0.977, -0.8715, -0.1849, -0.977, -0.9251, -0.3621, -0.977, -0.8715, -0.6683, -0.977, -0.6668, -0.5254, -0.977, -0.784, -0.6683, -0.977, -0.6668, -0.873, -0.977, -0.3605, -0.7854, -0.977, -0.5239, -0.873, -0.977, -0.3605, -0.9444, -0.977, 0.0005, -0.9267, -0.977, -0.1837, -0.9444, -0.977, 0.0005, -0.873, -0.977, 0.3619, -0.9267, -0.977, 0.1847, -0.873, -0.977, 0.3619, -0.6683, -0.977, 0.6678, -0.7854, -0.977, 0.5249, -0.6683, -0.977, 0.6678, -0.3621, -0.977, 0.8725, -0.5254, -0.977, 0.7854, -0.3621, -0.977, 0.8725, -0.0011, -0.977, 0.9443, -0.1849, -0.977, 0.926, -0.0011, -0.977, 0.9443, 0.3604, -0.977, 0.8725, 0.1831, -0.977, 0.926, 0.3604, -0.977, 0.8725, 0.6666, -0.977, 0.6678, 0.5231, -0.977, 0.7854, 0.6666, -0.977, 0.6678, 0.8707, -0.977, 0.3619, 0.7837, -0.977, 0.5249, 0.8707, -0.977, 0.3619, 0.9427, -0.977, 0.0005, 0.9244, -0.977, 0.1847, 0.9427, -0.977, 0.0005, 0.8707, -0.977, -0.3605, 0.9244, -0.977, -0.1837, 0.8707, -0.977, -0.3605, 0.6666, -0.977, -0.6668, 0.7837, -0.977, -0.5239, 0.6666, -0.977, -0.6668, 0.3604, -0.977, -0.8715, 0.5231, -0.977, -0.784, 0.3604, -0.977, -0.8715, -0.3621, -0.977, -0.8715, -0.0011, -0.977, -0.9433, -0.3621, -0.977, -0.8715, -0.873, -0.977, -0.3605, -0.6683, -0.977, -0.6668, -0.873, -0.977, -0.3605, -0.873, -0.977, 0.3619, -0.9444, -0.977, 0.0005, -0.873, -0.977, 0.3619, -0.3621, -0.977, 0.8725, -0.6683, -0.977, 0.6678, -0.3621, -0.977, 0.8725, 0.3604, -0.977, 0.8725, -0.0011, -0.977, 0.9443, 0.3604, -0.977, 0.8725, 0.8707, -0.977, 0.3619, 0.6666, -0.977, 0.6678, 0.8707, -0.977, 0.3619, 0.8707, -0.977, -0.3605, 0.9427, -0.977, 0.0005, 0.8707, -0.977, -0.3605, 0.3604, -0.977, -0.8715, 0.6666, -0.977, -0.6668, 0.3604, -0.977, -0.8715, -0.873, -0.977, -0.3605, -0.3621, -0.977, -0.8715, -0.873, -0.977, -0.3605, -0.3621, -0.977, 0.8725, -0.873, -0.977, 0.3619, -0.3621, -0.977, 0.8725, 0.8707, -0.977, 0.3619, 0.3604, -0.977, 0.8725, 0.8707, -0.977, 0.3619, 0.3604, -0.977, -0.8715, 0.8707, -0.977, -0.3605, 0.3604, -0.977, -0.8715, -0.3621, -0.977, 0.8725, -0.873, -0.977, -0.3605, -0.3621, -0.977, 0.8725, 0.3604, -0.977, -0.8715, 0.8707, -0.977, 0.3619, -0.3621, -12.7754, -0.8715, -0.1849, -0.977, -0.9251, -0.3621, -0.977, -0.8715, -0.3621, -12.7754, -0.8715, -0.1849, -12.7754, -0.9251, -0.1849, -0.977, -0.9251, -0.1849, -12.7754, -0.9251, -0.0011, -0.977, -0.9433, -0.1849, -0.977, -0.9251, -0.1849, -12.7754, -0.9251, -0.0011, -12.7754, -0.9433, -0.0011, -0.977, -0.9433, -0.1849, -12.7754, -0.9251, 0.1831, -12.7754, -0.9251, -0.0011, -12.7754, -0.9433, 0.1831, -12.7754, -0.9251, 0.5231, -12.7754, -0.784, 0.3604, -12.7754, -0.8715, 0.5231, -12.7754, -0.784, 0.7837, -12.7754, -0.5239, 0.6666, -12.7754, -0.6668, 0.7837, -12.7754, -0.5239, 0.9244, -12.7754, -0.1837, 0.8707, -12.7754, -0.3605, 0.9244, -12.7754, -0.1837, 0.9244, -12.7754, 0.1847, 0.9427, -12.7754, 0.0005, 0.9244, -12.7754, 0.1847, 0.7837, -12.7754, 0.5249, 0.8707, -12.7754, 0.3619, 0.7837, -12.7754, 0.5249, 0.5231, -12.7754, 0.7854, 0.6666, -12.7754, 0.6678, 0.5231, -12.7754, 0.7854, 0.1831, -12.7754, 0.926, 0.3604, -12.7754, 0.8725, 0.1831, -12.7754, 0.926, -0.1849, -12.7754, 0.926, -0.0011, -12.7754, 0.9443, -0.1849, -12.7754, 0.926, -0.5254, -12.7754, 0.7854, -0.3621, -12.7754, 0.8725, -0.5254, -12.7754, 0.7854, -0.7854, -12.7754, 0.5249, -0.6683, -12.7754, 0.6678, -0.7854, -12.7754, 0.5249, -0.9267, -12.7754, 0.1847, -0.873, -12.7754, 0.3619, -0.9267, -12.7754, 0.1847, -0.9267, -12.7754, -0.1837, -0.9444, -12.7754, 0.0005, -0.9267, -12.7754, -0.1837, -0.7854, -12.7754, -0.5239, -0.873, -12.7754, -0.3605, -0.7854, -12.7754, -0.5239, -0.5254, -12.7754, -0.784, -0.6683, -12.7754, -0.6668, -0.5254, -12.7754, -0.784, -0.1849, -12.7754, -0.9251, -0.3621, -12.7754, -0.8715, -0.1849, -12.7754, -0.9251, 0.5231, -12.7754, -0.784, 0.1831, -12.7754, -0.9251, 0.5231, -12.7754, -0.784, 0.9244, -12.7754, -0.1837, 0.7837, -12.7754, -0.5239, 0.9244, -12.7754, -0.1837, 0.7837, -12.7754, 0.5249, 0.9244, -12.7754, 0.1847, 0.7837, -12.7754, 0.5249, 0.1831, -12.7754, 0.926, 0.5231, -12.7754, 0.7854, 0.1831, -12.7754, 0.926, -0.5254, -12.7754, 0.7854, -0.1849, -12.7754, 0.926, -0.5254, -12.7754, 0.7854, -0.9267, -12.7754, 0.1847, -0.7854, -12.7754, 0.5249, -0.9267, -12.7754, 0.1847, -0.7854, -12.7754, -0.5239, -0.9267, -12.7754, -0.1837, -0.7854, -12.7754, -0.5239, -0.1849, -12.7754, -0.9251, -0.5254, -12.7754, -0.784, -0.1849, -12.7754, -0.9251, 0.9244, -12.7754, -0.1837, 0.5231, -12.7754, -0.784, 0.9244, -12.7754, -0.1837, 0.1831, -12.7754, 0.926, 0.7837, -12.7754, 0.5249, 0.1831, -12.7754, 0.926, -0.9267, -12.7754, 0.1847, -0.5254, -12.7754, 0.7854, -0.9267, -12.7754, 0.1847, -0.1849, -12.7754, -0.9251, -0.7854, -12.7754, -0.5239, -0.1849, -12.7754, -0.9251, 0.1831, -12.7754, 0.926, 0.9244, -12.7754, -0.1837, 0.1831, -12.7754, 0.926, -0.1849, -12.7754, -0.9251, -0.9267, -12.7754, 0.1847)

[sub_resource type="BoxShape3D" id="BoxShape3D_m8r4d"]
size = Vector3(96.3763, 21.5477, 103.532)

[node name="gate_counter" instance=ExtResource("1_fdqxc")]
script = ExtResource("2_fy01x")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube_002" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube_002/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_35k4y")

[node name="Area3D" type="Area3D" parent="Cube_002" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube_002/Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.9449, -3.34796, 31.5772)
shape = SubResource("BoxShape3D_m8r4d")

[node name="airline_worker" parent="." index="1" instance=ExtResource("2_hu65x")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 2.18005, 0, -2.10507)

[connection signal="body_entered" from="Cube_002/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Cube_002/Area3D" to="." method="_on_area_3d_body_exited"]
